--- a/wikywatch/package.json
+++ b/wikywatch/package.json
@@ -10,27 +10,33 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@ant-design/react-native": "^5.4.2",
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-community/viewpager": "^5.0.11",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/stack": "^7.3.2",
+    "@reduxjs/toolkit": "^2.8.2",
+    "axios": "^1.9.0",
     "expo": "~53.0.9",
     "expo-checkbox": "^4.1.4",
+    "expo-document-picker": "~13.1.5",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.2",
-    "react-native-gesture-handler": "~2.24.0",
+    "react-native-gesture-handler": "^2.25.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-reanimated-carousel": "^4.0.2",
     "react-native-safe-area-context": "^5.4.1",
     "react-native-screens": "~4.10.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-status-bar-height": "^2.6.0",
+    "react-native-swipe-list-view": "^3.2.9",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.2.0",
-    "yet": "^0.1.0",
-    "expo-document-picker": "~13.1.5"
+    "react-redux": "^9.2.0",
+    "yet": "^0.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
