--- a/wikywatch/package.json
+++ b/wikywatch/package.json
@@ -35,6 +35,7 @@
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-webview": "^13.14.0",
     "react-redux": "^9.2.0",
     "yet": "^0.1.0"
   },
